force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/UpdateCaseReasonsCodeMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>UpdateCaseReasonsCodeMapping</label>
</CustomObject>