force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/fields/CaseReasonLevelNew1__c.field-meta.xml
<CustomField>
    <fullName>CaseReasonLevelNew1__c</fullName>
    <label>CaseReasonLevelNew1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>