force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/fields/CaseReasonLevelNew2__c.field-meta.xml
<CustomField>
    <fullName>CaseReasonLevelNew2__c</fullName>
    <label>CaseReasonLevelNew2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>