force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/fields/CaseReasonLevelNew3__c.field-meta.xml
<CustomField>
    <fullName>CaseReasonLevelNew3__c</fullName>
    <label>CaseReasonLevelNew3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>