force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/fields/CaseReasonLevelOld1__c.field-meta.xml
<CustomField>
    <fullName>CaseReasonLevelOld1__c</fullName>
    <label>CaseReasonLevelOld1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>