force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/fields/CaseReasonLevelOld2__c.field-meta.xml
<CustomField>
    <fullName>CaseReasonLevelOld2__c</fullName>
    <label>CaseReasonLevelOld2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>