force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/fields/CaseReasonLevelOld3__c.field-meta.xml
<CustomField>
    <fullName>CaseReasonLevelOld3__c</fullName>
    <label>CaseReasonLevelOld3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>