force-app/main/default/objects/UpdateCaseReasonsCodeMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CaseReasonLevelOld1__c</columns>
    <columns>CaseReasonLevelOld2__c</columns>
    <columns>CaseReasonLevelOld3__c</columns>
    <columns>CaseReasonLevelNew1__c</columns>
    <columns>CaseReasonLevelNew2__c</columns>
    <columns>CaseReasonLevelNew3__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>